<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StringResourcePractice1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!-- TODO: 実習1: ここから下に、日本語の String リソースを作る -->
    <string name="one">いち</string>
    <string name="two">に</string>
    <string name="three">さん</string>
    <string name="four">よん</string>
    <string name="five">ご</string>
    <!-- TODO: 実習2: 日本語の String リソースに対応する英語リソースを作る -->
    
</resources>